# Lane-Detection-and-YOLO-TRT-Implementation-NUSTAG-EV

./: LICENSE  README.md  lapdepth.py
Test Vehicle/: getLATLONG.py  index.html  lane_finder.py
camera/: test_cam.py  test_cam_ROS.py  test_streo_cam.py
detection-trt/: README.md
detection-trt/python/: trt_yolo.py
detection-trt/samples/: sample_detector.cpp  signal_detector.cpp
lane detection/: README.md  calibrate.py  find_perspective_transform.py  lane_finder.py  projection.p  serial_int.py  settings.py
yolo-tensorrt/: CMakeLists.txt  package.xml
yolo-tensorrt/configs/: yolov4-tiny.cfg
yolo-tensorrt/samples/: sample_detector (copy).cpp  sample_detector.cpp  signal_detector.cpp
